crates/swc/tests/tsc-references/internalModules/moduleDeclarations/invalidNestedModules/input.ts/es2015.1.normal/output.js
var A;
(function(A1) {
    let B1;
    (function(B) {
        class C {
        }
        B.C = C;
    })(B1 || (B1 = {
    }));
    A1.B = B1;
})(A || (A = {
}));
var M2;
(function(M21) {
    let X1;
    (function(X) {
        var Point;
        X.Point = Point;
    })(X1 || (X1 = {
    }));
    M21.X = X1;
})(M2 || (M2 = {
}));
